@@ -1,2 +1,0 @@
-TweetStream allows you to easily consume the Twitter Streaming API utilizing
-the YAJL Ruby gem.
